tests/int/use_command/snapshots/integration__int__use_command__bin_only__should_use_main_grouped_in_bin_only.snap
---
source: tests/int/use_command/bin_only.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/bin_only
    - use
    - main
    - "-e"
    - "--format"
    - grouped
---
success: true
exit_code: 0
----- stdout -----
main
 - crate::config::Config
 - crate::utils::helper::run

----- stderr -----
