tests/int/use_command/snapshots/integration__int__use_command__bin_only__should_use_main_recursive_in_bin_only.snap
---
source: tests/int/use_command/bin_only.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/bin_only
    - use
    - main
    - "-r"
---
success: true
exit_code: 0
----- stdout -----
crate::config::Config
crate::utils::helper::run

----- stderr -----
